@@ -635,18 +635,18 @@ GST_EVENT_MAKE_TYPE
 
 gst_event_copy
 gst_event_get_structure
-gst_event_new_buffersize
+gst_event_new_buffer_size
 gst_event_new_custom
 gst_event_new_eos
 gst_event_new_flush_start
 gst_event_new_flush_stop
 gst_event_new_navigation
-gst_event_new_newsegment
+gst_event_new_new_segment
 gst_event_new_qos
 gst_event_new_seek
 gst_event_new_tag
-gst_event_parse_buffersize
-gst_event_parse_newsegment
+gst_event_parse_buffer_size
+gst_event_parse_new_segment
 gst_event_parse_qos
 gst_event_parse_seek
 gst_event_parse_tag
@@ -712,7 +712,7 @@ gst_format_get_type
 <TITLE>GstGhostPad</TITLE>
 GstGhostPad
 gst_ghost_pad_new
-gst_ghost_pad_new_notarget
+gst_ghost_pad_new_no_target
 gst_ghost_pad_set_target
 gst_ghost_pad_get_target
 <SUBSECTION Standard>
